sjengida/c0/SwitchPromoted
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/SwitchPromoted/src/crazy.c:673:13: error: use of undeclared identifier 'unk_424DE0'
memcpy( t, &unk_424DE0, sizeof( t)); 
            ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/SwitchPromoted/src/obj/crazy.o] Error 1
